--- a/deploy.yml
+++ b/deploy.yml
@@ -8,7 +8,7 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: openmrskk
+      app: openmrs
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -18,7 +18,7 @@ spec:
     metadata:
       name: openmrs
       labels:
-        app: openmrskk
+        app: openmrs
     spec:
       containers:
         - name: openmrs
